# msc-crypto-mqtt

./: .gitignore  README.md
ascon_provider/: CMakeLists.txt  a_params.c  a_params.h  ascon.c  v_params.c  v_params.h  vigenere backup.c  vigenere.c
ascon_provider/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ascon  test_ascon_err  test_vigenere  test_vigenere_err
ascon_provider/_build/libprov/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ascon_provider/ascon128/: aead.c  demo  demo.c  dmo  printstate.c
ascon_provider/ascon128a/: aead.c
ascon_provider/libprov/cmake/: provider.cmake
ascon_provider/test/: ascon_aes_no_tls_plot.py  test_ascon_aes  test_ascon_aes.c
dilithium_and_falcon/falcon/Falcon-impl-20211101/: speed  test_falcon
images/: average time result 32  publisher_32
malicious_broker/: README.md
openssl-3.2.0/: Makefile.in  configdata.pm  libssl.so.3  pod2htmd.tmp
openssl-3.2.0-beta1/: Makefile.in  configdata.pm  libcrypto.pc  libssl.pc  libssl.so.3  openssl.pc  pod2htmd.tmp
openssl-3.2.0-beta1/apps/: openssl  tsget.pl
openssl-3.2.0-beta1/crypto/: buildinf.h  params_idx.c
openssl-3.2.0-beta1/crypto/hpke/: libcrypto-lib-hpke.d  libcrypto-lib-hpke_util.d  libcrypto-shlib-hpke.d  libcrypto-shlib-hpke_util.d
openssl-3.2.0-beta1/crypto/modes/: aes-gcm-avx512.s
openssl-3.2.0-beta1/fuzz/: asn1-test  decoder-test  smime-test
openssl-3.2.0-beta1/include/openssl/: .obj_mac.h.swp  obj_mac.h  opensslv.h  ssl.h  tls1.h
openssl-3.2.0-beta1/ssl/: s3_lib.c  ssl_ciph.c  ssl_lib.c  ssl_local.h  t1_trce.c
openssl-3.2.0-beta1/ssl/record/: rec_layer_s3.c
openssl-3.2.0-beta1/test/: aesgcmtest  afalgtest  asn1_decode_test  asn1_encode_test  asynciotest  asynctest  bftest  bio_core_test  bio_dgram_test  bio_enc_test  bio_memleak_test  bio_tfo_test  bntest  buildtest_c_cmp  buildtest_c_configuration  buildtest_c_crmf  buildtest_c_ess  buildtest_c_fipskey  casttest  cmsapitest  danetest  defltfips_test  dtlstest  enginetest  event_queue_test  evp_kdf_test  evp_pkey_ctx_new_from_name  evp_test  exdatatest  fips_version_test  localetest  membio_test  ocspapitest  params_conversion_test  pkcs7_test  priority_queue_test  quicapitest-bin-quicapitest.d  rand_status_test  rand_test  rand_test-bin-rand_test.d  (+16 more)
openssl-3.2.0-beta1/test-runs/test_ca/: both_utctime-crl.pem  (+14 more)
openssl-3.2.0-beta1/util/: wrap.pl
openssl-3.2.0/apps/: openssl
openssl-3.2.0/crypto/: buildinf.h  params_idx.c
openssl-3.2.0/fuzz/: x509-test
openssl-3.2.0/ssl/: s3_lib.c  ssl_ciph.c  ssl_lib.c  ssl_local.h  t1_trce.c
openssl-3.2.0/test/: asn1_string_table_test  asn1_time_test  bad_dtls_test  bio_addr_test  bio_callback_test  bio_prefix_text  bio_readbuffer_test  bioprinttest  bntest  ca_internals_test  cipherbytes_test  cipherlist_test  ciphername_test  clienthellotest  conf_include_test  constant_time_test  crltest  ct_test  d2i_test  dtls_mtu_test  dtlsv1listentest  ecstresstest  errtest  event_queue_test  evp_extra_test2  evp_fetch_prov_test  evp_pkey_dparams_test  evp_test  exptest  fatalerrtest  gmdifftest  http_test  igetest  lhash_test  list_test  mdc2test  packettest  params_api_test  pbelutest  pbetest  (+29 more)
openssl-3.2.0/util/: wrap.pl
other_programming_stuff/: main.py
other_programming_stuff/mqtt_certs/: mqtt.crt  mqtt.key  mqtt.pem
other_programming_stuff/plot_scripts/: results.txt
semi_honest_broker/: README.md
trusted_broker/plot_scripts/: bar_plot.py  bar_plot_final_pic.py  bar_plot_v2.py  plot_broker.py  plot_broker_v2.py  plot_dilithium_and_falcon.py  publisher_A_plot.py  publisher_B_plot.py  publisher_plot_v2.py  subscriber_A_plot.py  subscriber_B_plot.py  subscriber_plot_v2.py  tls_handshake_plot.py  tls_handshake_plot_v2.py  violin_plot.py  violin_plot_v2.py
(+1970 files in other folders)
